--- a/BossOfTheGym/Pages/CabinetPage.cshtml
+++ b/BossOfTheGym/Pages/CabinetPage.cshtml
@@ -21,7 +21,7 @@
     <div class="form-card">
         <div class="form-card__wrapper container pt-5 pb-5 ps-1 pe-1">
             <div class="card-header__wrapper container-fluid d-flex justify-content-center">
-                <h1>Welcome to our GYM!</h1>
+                <h1 class="text-piedra">Welcome to our GYM!</h1>
             </div>
             <hr />
             <div class="card-body__wrapper container-fluid">
