--- a/BossOfTheGym/Pages/Services.cshtml
+++ b/BossOfTheGym/Pages/Services.cshtml
@@ -6,6 +6,7 @@
 @section Scripts {
     <script src="~/js/UnderlineTextScript.js"></script>
     <script src="~/js/CarouselScript.js"></script>
+    <script src="~/js/ScriptForParallax.js"></script>
 }
 
 @section Styles {
@@ -53,6 +54,19 @@
                 Join us, we are waiting for you!!!
             </p>
         </div>
+    </div>
+</div>
+<div class="coachers-part__wrapper container-fluid mt-5">
+    <div class="container-fluid d-flex justify-content-start">
+        <div class="underline-text__wrapper">
+            <h2 class="text-splash unline-text">Our coachers:</h2>
+            <div class="unline darkGoldenrod"></div>
+        </div>
+    </div>
+    <hr />
+    <div class="coachers__wrapper container-fluid">
+        <div class="background bckg-coachers__wrapper container-fluid"></div>
+        <div class="coachers-cards__wrapper"></div>
     </div>
 </div>
 
