--- a/BossOfTheGym/wwwroot/css/StyleServices.css
+++ b/BossOfTheGym/wwwroot/css/StyleServices.css
@@ -3,3 +3,14 @@
     height: 2.5px;
     transition: 1s;
 }
+
+.coachers__wrapper {
+    overflow:hidden;
+    height: 100px;
+}
+
+.background {
+    height: 110%;
+    width: 110%;
+    background: url("../images/backgrounds/background_asphalt.jpg") 50% 50% / cover no-repeat;
+}
