Create new code html for coachers cards, and add comments

--- a/BossOfTheGym/Pages/Services.cshtml
+++ b/BossOfTheGym/Pages/Services.cshtml
@@ -66,7 +66,22 @@
     <hr />
     <div class="coachers__wrapper container-fluid">
         <div class="background bckg-coachers__wrapper container-fluid"></div>
-        <div class="coachers-cards__wrapper"></div>
+        <div class="coachers-cards__wrapper">
+            <div class="row">
+                <div class="col-4 d-flex justify-content-center">
+                    <div class="coacher-card__wrapper">
+                        <div class="coacher-card__top"></div>
+                        <div class="coacher-card__back"></div>
+                    </div>
+                </div>
+                <div class="col-4">
+                    
+                </div>
+                <div class="col-4">
+                    
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 
