--- a/BossOfTheGym/Pages/Services.cshtml
+++ b/BossOfTheGym/Pages/Services.cshtml
@@ -7,6 +7,7 @@
     <script src="~/js/UnderlineTextScript.js"></script>
     <script src="~/js/CarouselScript.js"></script>
     <script src="~/js/ScriptForParallax.js"></script>
+    <script src="~/js/ScriptForServices.js"></script>
 }
 
 @section Styles {
@@ -70,8 +71,16 @@
             <div class="row">
                 <div class="col-4 d-flex justify-content-center">
                     <div class="coacher-card__wrapper">
-                        <div class="coacher-card__top"></div>
-                        <div class="coacher-card__back"></div>
+                        <div class="coacher-card__top">
+                            <div class="coacher-img" style="background:url('') 50% 50%/ cover no-repeat"></div>
+                        </div>
+                        <div class="coacher-card__back d-flex flex-column justify-content-center align-items-center">
+                            <div class="underline-text__wrapper">
+                                <h5 class="unline-text">Something</h5>
+                                <div class="unline bulgarianRose"></div>
+                            </div>
+                            <p>Something</p>
+                        </div>
                     </div>
                 </div>
                 <div class="col-4">
