New algorithm for page "Services" (this is demo version of algorithm, and you can throw exception)

--- a/BossOfTheGym/Pages/Services.cshtml
+++ b/BossOfTheGym/Pages/Services.cshtml
@@ -62,6 +62,9 @@
         </div>
     </div>
 </div>
+
+@Model.typeCoacher.Id
+
 <div class="coachers-part__wrapper container-fluid mt-5">
     <div class="container-fluid d-flex justify-content-start">
         <div class="underline-text__wrapper">
