Create script for form "Sign Up", and styles for this form

--- a/BossOfTheGym/Pages/Auth.cshtml
+++ b/BossOfTheGym/Pages/Auth.cshtml
@@ -70,7 +70,7 @@
                     <div class="form-group">
                         <label for="nicknameLogId">Your nickname:</label>
                         <input class="form-control nickname-form__log" id="nicknameLogId" type="text" name="nicknameLog" aria-describedby="nicknameLogHelpId" />
-                        <small class="text-piedra coltext-burgundy msg-error msg-error__nicknameLog">Something</small>
+                        <small class="text-piedra coltext-burgundy msg-error msg-error__nicknameLog"></small>
                     </div>
                     <div class="form-group">
                         <label for="psswdLogId">Your password: </label>
