--- a/BossOfTheGym/Pages/Services.cshtml
+++ b/BossOfTheGym/Pages/Services.cshtml
@@ -102,15 +102,14 @@
     </div>
 </div>
 <hr />
-<div class="signUp__wrapper">
+<div class="signUp__wrapper mb-5">
     <div class="row">
-        <div class="col-6">
-            <div class="d-flex flex-column justify-content-center align-items-center">
-                <div class="underline-text__wrapper">
-                    <h3 class="text-piedra">Let's see you in our gym! Boss Of The Gym</h3>
-                    <h3 class="text-piedra unline-text">Boss Of The Gym!</h3>
-                    <div class="unline bulgarianRose"></div>
-                </div>
+        <div class="col-6 d-flex flex-column justify-content-center align-items-center">
+
+            <div class="underline-text__wrapper">
+                <h3 class="text-piedra">Fill the Form and see you in our gym!</h3>
+                <h3 class="text-piedra unline-text">Boss Of The Gym!</h3>
+                <div class="unline bulgarianRose"></div>
             </div>
         </div>
         <div class="col-6">
@@ -118,17 +117,17 @@
                 <div class="signUp-form__wrapper">
                     <form method="post">
                         <div class="container-fluid">
-                            <div class="form-group">
+                            <div class="form-group mt-3">
                                 <label for="nameId">Write your name</label>
                                 <input id="nameId" class="form-control name-form__input" type="text" />
                             </div>
-                            <div class="form-group">
-                                <label for="telId">Write your phone number</label>
-                                <input id="telId" class="form-control tel-form__input" type="tel" name="telNumber" aria-describedby="telHelpId"/>
-                                <small id="telHelpId" class="text-piedra coltext-burgundy msg-error msg-error__tel"></small>
+                            <div class="form-group mt-3">
+                                <label for="emailId">Write your email</label>
+                                <input id="emailId" class="form-control email-form__input" type="email" name="email" aria-describedby="emailHelpId"/>
+                                <small id="emailHelpId" class="text-piedra coltext-burgundy msg-error msg-error__email"></small>
                             </div>
                         </div>
-                        <div class="container-fluid d-flex flex-column justify-content-end">
+                        <div class="container-fluid d-flex flex-column justify-content-end mt-4">
                             <button type="submit" class="btn btn-outline-dark" asp-page-handler="SignUp">Sign Up</button>
                         </div>
                     </form>
